--- a/index.html
+++ b/index.html
@@ -38,17 +38,24 @@
   </nav>
 
   <!-- Image with alt text for accessibility -->
-  <img src="images/person.png" alt="person" loading="lazy" >
-
+  <img src="images/person.png" alt="person"  >
+  <h2>About Me</h2>
   <p>
-    About Me: 
+    I am a level 4 computer science student studying at University of Staffordshire London. I 
   </p>
+  <h2>Skills</h2>
   <p>
-    My Skills
+    Database Management, Networking, Software Development (Python, Java, javascript,HTML,CSS)
   </p>
-  <p>
-    My Hobbies
-  </p>
+  <h2>Hobbies</h2>
+      <ol>
+      <li>Cooking</li>
+      <li>Trading card games</li>
+      <li>Collecting Plushies</li>
+      <li>Reading</li>
+      <li>Watching Anime</li>
+      <li>Video Games</li>
+    </ol>
 
   <footer>
     My name is Dylan and I am studying a degree in Computer Science at University of Staffordshire.
