--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <img src="images/person.png" alt="person"  >
   <h2>About Me</h2>
   <p>
-    I am a level 4 computer science student studying at University of Staffordshire London. I 
+    I am a level 4 computer science student studying at University of Staffordshire London.
   </p>
   <h2>Skills</h2>
   <p>
