--- a/jsdemo.html
+++ b/jsdemo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-GB">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -8,7 +8,14 @@
   <script defer src="jsdemo.js"></script>
 </head>
 <body class="no-background">
-  <nav>...</nav>
+       <nav aria-label="Main site navigation">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="interest.html">Interests</a></li>
+      <li><a href="qualifications.html">Qualifications</a></li>
+      <li><a href="demos.html">Demos</a></li>
+    </ul>
+  </nav>
   <main>
     <h1>JavaScript Demo Showcase</h1>
 
