--- a/jsdemo.html
+++ b/jsdemo.html
@@ -39,9 +39,9 @@
 
     <!-- JSON API Section -->
     <section id="api-section">
-      <h2>External API Data (Joke)</h2>
-      <button id="fetchJoke">Get Joke</button>
-      <p id="jokeText"></p>
+      <h2>External API Data (Word)</h2>
+      <button id="fetchWord">Get Word</button>
+      <p id="word"></p>
     </section>
   </main>
 </body>
