--- a/jsdemo.html
+++ b/jsdemo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-GB">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -8,7 +8,7 @@
   <script defer src="jsdemo.js"></script>
 </head>
 <body class="no-background">
-       <nav aria-label="Main site navigation">
+  <nav aria-label="Main site navigation">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="interest.html">Interests</a></li>
@@ -39,9 +39,9 @@
 
     <!-- JSON API Section -->
     <section id="api-section">
-      <h2>External API Data (Word)</h2>
-      <button id="fetchWord">Get Word</button>
-      <p id="word"></p>
+      <h2>External API Data (Joke)</h2>
+      <button id="fetchJoke">Get Joke</button>
+      <p id="jokeText"></p>
     </section>
   </main>
 </body>
