--- a/jsdemo.html
+++ b/jsdemo.html
@@ -17,8 +17,14 @@
     </ul>
   </nav>
   <main>
+    
     <h1>JavaScript Demo Showcase</h1>
-
+    <!-- JSON API Section -->
+    <section id="api-section">
+      <h2>External API Data (Joke)</h2>
+      <button id="fetchJoke">Get Joke</button>
+      <p id="jokeText"></p>
+    </section>
     <!-- Form for DOM + Calculation demo -->
     <section id="calc-section">
       <h2>Simple Calculator</h2>
@@ -30,6 +36,12 @@
       <p>Result: <span id="result"></span></p>
     </section>
 
+    <section>
+      <h2>Hobbies from Internal JSON</h2>
+      <ul id="hobbyList"></ul>
+    </section>
+
+
     <!-- SVG Drawing -->
     <section id="svg-section">
       <h2>SVG Demo</h2>
@@ -37,12 +49,7 @@
       <svg id="demoSVG" width="200" height="200"></svg>
     </section>
 
-    <!-- JSON API Section -->
-    <section id="api-section">
-      <h2>External API Data (Joke)</h2>
-      <button id="fetchJoke">Get Joke</button>
-      <p id="jokeText"></p>
-    </section>
+    
   </main>
 </body>
 </html>
