--- a/interest.html
+++ b/interest.html
@@ -35,7 +35,7 @@
   <img src="images/interest.jpg" alt="Image for My Interests" loading="lazy" >
   
 <p>
-    This is information about my Interests
+    This is information about my Interests: My Favourite Animated Series is <em>RWBY</em> and my favourite TCG is <em>YU-GI-OH</em>  
 </p>
 
 <footer>
