--- a/cssdemo.html
+++ b/cssdemo.html
@@ -11,6 +11,14 @@
       <h1>CSS Playground</h1>
       <h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
     </header>
+    <nav aria-label="Main site navigation">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="interest.html">Interests</a></li>
+      <li><a href="qualifications.html">Qualifications</a></li>
+      <li><a href="demos.html">Demos</a></li>
+    </ul>
+  </nav>
       <h2>A bit about this page</h2>
       <p>My name is Dylan and I am on the first year of a Computer Science degree</p>
       <p>A demonstration of what I can accomplish using vanilla CSS. This is part of my third assignment
