--- a/cssdemo.html
+++ b/cssdemo.html
@@ -26,7 +26,7 @@
       <h2>Cascading Style Sheets (CSS)</h2>
       <p><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">MDN definition of CSS </a> is    </p>
       <blockquote cite="https://developer.mozilla.org/en-US/docs/Web/CSS">
-        "a stylesheet language used to describe the presentation of a document written in HTML or XML (including XML dialects such as SVG, MathML or XHTML).\n CSS describes how elements should be rendered on screen, on paper, in speech, or on other media." (W3C(2022))
+        "a stylesheet language used to describe the presentation of a document written in HTML or XML (including XML dialects such as SVG, MathML or XHTML). CSS describes how elements should be rendered on screen, on paper, in speech, or on other media." (W3C(2022))
       </blockquote>
        <h2>What is CSS</h2>
       <p>CSS is for the styling of web content, such as colours and layout. It allows the look and feel of the web
