--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-    <link rel="stylesheet" href="basestyle.css" />
+    <link rel="stylesheet" href="basestyle.css">
 
     <link rel="manifest" href="manifest.json">
     <link rel="icon-192" href="icons/icon-192.png" sizes="192x192">
