--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <!-- Header Section -->
   <div>
-    <h2>Index</h2>
+    <h2 id="anchor">Index</h2>
   </div>
 
   <!-- Navigation Menu -->
@@ -56,6 +56,10 @@
       <li>Watching Anime</li>
       <li>Video Games</li>
     </ol>
+
+
+
+<a href="#anchor">To Top</a>
 
   <footer>
     My name is Dylan and I am studying a degree in Computer Science at University of Staffordshire.
