--- a/cssdemo.html
+++ b/cssdemo.html
@@ -4,7 +4,7 @@
   <title>CSS Demo Page</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="cssdemo.css" />
+  <link rel="stylesheet" href="cssdemo.css">
 </head>
 <body>
     <header>
