--- a/interest.html
+++ b/interest.html
@@ -2,7 +2,9 @@
 <html lang="en-GB">
 <head>
     <link rel="stylesheet" href="basestyle.css" />
-
+<link rel="manifest" href="manifest.json">
+    <link rel="icon-192" href="icons/icon-192.png" sizes="192x192">
+    <link rel="icon-512" href="icons/icon-512.png">
   <meta charset="UTF-8" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
   <meta name="description" content="This describes my web page" >
