--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="basestyle.css">
 
     <link rel="manifest" href="manifest.json">
-    <link rel="icon-192" href="icons/icon-192.png" sizes="192x192">
+    <link rel="icon" href="icons/icon-192.png" sizes="192x192">
     <link rel="icon-512" href="icons/icon-512.png">
   <meta charset="UTF-8" >
   <meta name="viewport" content="width=device-width, initial-scale=1.0" >
